2009-03-12	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1393/cpukit
	* posix/src/mutextranslatereturncode.c: Add entry to table for
	CORE_MUTEX_RELEASE_NOT_ORDER.

2009-03-11	Ralf Corsépius <ralfcorsepius@rtems.org>

	* configure.ac: Check for __assert().
	* libcsupport/src/__assert.c: Conditionally build __assert().

2009-03-10	Ralf Corsépius <ralfcorsepius@rtems.org>

	* configure.ac: Check for creat().
	* libcsupport/src/creat.c: Build conditionally.

2009-03-09	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1376/filesystem
	* libcsupport/include/rtems/libio.h, libfs/src/dosfs/fat_file.c,
	libfs/src/dosfs/msdos.h, libfs/src/dosfs/msdos_dir.c,
	libfs/src/dosfs/msdos_file.c, libfs/src/imfs/deviceio.c,
	libfs/src/imfs/imfs.h, libfs/src/imfs/imfs_directory.c,
	libfs/src/imfs/imfs_fifo.c, libfs/src/imfs/memfile.c,
	libfs/src/nfsclient/src/nfs.c: lseek handlers should return off_t.

2009-03-06	Joel Sherrill <joel.sherrill@oarcorp.com>

	* score/inline/rtems/score/heap.inl: Use the correct fields and do end
	- begin.

2009-03-05	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libcsupport/src/malloc_initialize.c: Fixed invalid function
	parameter.

2009-03-02	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libcsupport/src/malloc_initialize.c, score/Makefile.am,
	score/include/rtems/score/protectedheap.h,
	score/inline/rtems/score/heap.inl: Get total heap size correct when
	using unified C Program Heap and RTEMS Workspace.
	* score/src/pheapgetsize.c: New file.

2009-03-02	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1388/cpukit
	* rtems/src/semcreate.c: Classic Semaphores allow both priority inherit
	and ceiling attributes to be set on semaphore create. These
	attributes are mutually exclusive and this should be an error.

2009-02-27	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libmisc/shell/shell.c, libmisc/shell/shell.h:  Changed type for
	boolean values from 'int' to 'bool'.  Added option 'login' to enable or